# clMagma-CMake

./: CMakeLists.txt  ContributorsGuide.txt  Makefile  Makefile.internal  README  README.md  ReleaseNotes  Tahiti.kdb  clMagmaTesting.cmake  make.check-acml  make.check-clblas  make.inc.acml  make.inc.mkl
control/: Makefile  auxiliary.cpp  common_magma.h  constants.cpp  cpanel_to_q.cpp  cprint.cpp  dpanel_to_q.cpp  dprint.cpp  get_nb_tahiti.cpp  magma.f90  magma_cf77.cpp  magma_cfortran.F90  magma_df77.cpp  magma_dfortran.F90  magma_f77.cpp  magma_param.f90  magma_sf77.cpp  magma_sfortran.F90  magma_zf77.cpp  magma_zfortran.F90  magmawinthread.c  magmawinthread.h  operators.h  spanel_to_q.cpp  sprint.cpp  strlcpy.cpp  timer.cpp  trace.cpp  trace.h  transpose.h  xerbla.cpp  zpanel_to_q.cpp  zprint.cpp
include/: Makefile.src  auxiliary.h  magma.h  magma_c.h  magma_clapack.h  magma_d.h  magma_dlapack.h  magma_lapack.h  magma_mangling.h  magma_s.h  magma_slapack.h  magma_types.h  magma_z.h  magma_zlapack.h  magmablas.h  magmablas_c.h  magmablas_d.h  magmablas_ds.h  magmablas_s.h  magmablas_z.h  magmablas_z_trace.h  magmablas_zc.h
interface_opencl/: CL_MAGMA_RT.cpp  CL_MAGMA_RT.h  Makefile  Makefile.src  cauxiliary.cl  cauxiliary.cpp  cbcyclic.cpp  cgemm_reduce.cl  cgemm_reduce.cpp  clVendor.h  clacpy.cl  clacpy.cpp  clag2z.cl  clag2z.cpp  clarfbx.cl  clarfbx.cpp  clarfgx-v2.cl  clarfgx-v2.cpp  clarfx.cl  clcompile.cpp  clfiles  cpermute-v2.cl  cpermute.cpp  cswap.cl  cswap.cpp  ctranspose-v2.cl  ctranspose.cl  ctranspose.cpp  ctranspose2.cpp  ctranspose_inplace.cl  ctranspose_inplace.cpp  dauxiliary.cl  dauxiliary.cpp  dbcyclic.cpp  dgemm_reduce.cl  dgemm_reduce.cpp  dlacpy.cl  dlacpy.cpp  dlag2s.cl  dlag2s.cpp  (+80 more)
interface_opencl/cl_magma_runtime/: compilecl.cpp
lib/pkgconfig/: clmagma.pc.in
src/: Makefile  Makefile.src  cgebrd.cpp  cgeev.cpp  cgehrd.cpp  cgels_gpu.cpp  cgeqr2x_gpu-v3.cpp  cgeqrf.cpp  cgeqrf2_2q_gpu.cpp  cgeqrf2_gpu.cpp  cgeqrf_gpu.cpp  cgeqrf_mgpu.cpp  cgeqrf_msub.cpp  cgeqrs_gpu.cpp  cgesv.cpp  cgesv_gpu.cpp  cgesvd.cpp  cgetrf.cpp  cgetrf2_gpu.cpp  cgetrf2_mgpu.cpp  cgetrf2_msub.cpp  cgetrf_gpu.cpp  cgetrf_mgpu.cpp  cgetrf_msub.cpp  cgetri_gpu.cpp  cgetrs_gpu.cpp  cheevd.cpp  chetrd.cpp  clabrd_gpu.cpp  clahr2.cpp  clahru.cpp  clarfb_gpu.cpp  clatrd.cpp  clauum_gpu.cpp  cposv.cpp  cposv_gpu.cpp  cpotrf.cpp  cpotrf2_gpu.cpp  cpotrf2_mgpu.cpp  cpotrf2_msub.cpp  (+174 more)
testing/: Makefile  Makefile.src  flops.h  testing_benchmark.cpp  testing_cgebrd.cpp  testing_cgeev.cpp  testing_cgehrd.cpp  testing_cgemm.cpp  testing_cgemm_reduce.cpp  testing_cgemv.cpp  testing_cgeqr2x_gpu.cpp  testing_cgeqrf.cpp  testing_cgeqrf2_gpu.cpp  testing_cgeqrf_gpu.cpp  testing_cgeqrf_mgpu.cpp  testing_cgeqrf_msub.cpp  testing_cgeqrs_gpu.cpp  testing_cgesv.cpp  testing_cgesv_gpu.cpp  testing_cgesvd.cpp  testing_cgetrf.cpp  testing_cgetrf2_gpu.cpp  testing_cgetrf_gpu.cpp  testing_cgetrf_mgpu.cpp  testing_cgetrf_msub.cpp  testing_cgetri_gpu.cpp  testing_cheevd.cpp  testing_chetrd.cpp  testing_claswp.cpp  testing_constants.cpp  testing_cposv.cpp  testing_cposv_gpu.cpp  testing_cpotrf.cpp  testing_cpotrf2_gpu.cpp  testing_cpotrf_gpu.cpp  testing_cpotrf_mgpu.cpp  testing_cpotrf_msub.cpp  testing_cpotri_gpu.cpp  testing_cutil.cpp  testing_dgebrd.cpp  (+103 more)
